Changes to a procedural texture don't reflect in displacement modifier immediately #58679

Closed
opened 2018-12-04 04:48:15 +01:00 by green giant · 11 comments

System Information
Operating system: Windows 10
Graphics card: Gtx 960

Blender Version
Broken: 2.80 Beta Date:2018-11-30 22:29
Worked: 2.79b

Short description of error
Changes to a displacement modifiers procedural texture don't reflect in the viewport until you hide and then reshow the displacement modifier

Exact steps for others to reproduce the error
Add a Displacement modifier to the default cube
Click + New to create a new texture
Click the Show Texture button
Change the type to Clouds
Observe that the cube doesnt change shape
Go back to the modifier tab.
Disable "Display modifier in Viewport" and then re enable it
Observe that the shape is now different

Additionally you can go back to the texture and change the size parameter and see that it doesnt update in viewport as it should

Note
This worked in Blender 2.79b, but only if the render engine was set to Cycles, but not if it was set to Blender Render

**System Information** Operating system: Windows 10 Graphics card: Gtx 960 **Blender Version** Broken: 2.80 Beta Date:2018-11-30 22:29 Worked: 2.79b **Short description of error** Changes to a displacement modifiers procedural texture don't reflect in the viewport until you hide and then reshow the displacement modifier **Exact steps for others to reproduce the error** Add a Displacement modifier to the default cube Click + New to create a new texture Click the Show Texture button Change the type to Clouds Observe that the cube doesnt change shape Go back to the modifier tab. Disable "Display modifier in Viewport" and then re enable it Observe that the shape is now different Additionally you can go back to the texture and change the size parameter and see that it doesnt update in viewport as it should **Note** This worked in Blender 2.79b, but only if the render engine was set to Cycles, but not if it was set to Blender Render
Author

Added subscriber: @greengiant83

Added subscriber: @greengiant83

#58168 was marked as duplicate of this issue

#58168 was marked as duplicate of this issue

Added subscribers: @Sergey, @ZedDB

Added subscribers: @Sergey, @ZedDB

I can reproduce this issue.

@Sergey I'm guessing this is a depsgraph issue were changing the texture parameters doesn't lead to a reevaluation of the displace modifier. Any pointers on how to go about adding that or do you want to fix it yourself?

I can reproduce this issue. @Sergey I'm guessing this is a depsgraph issue were changing the texture parameters doesn't lead to a reevaluation of the displace modifier. Any pointers on how to go about adding that or do you want to fix it yourself?

This issue was referenced by 6e00415a85

This issue was referenced by 6e00415a85a995f3d976530ea3ba748971292212

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Added subscribers: @MatthewChristopher, @Alaska, @EduardoG, @user1, @Mantissa

@Sergey this still doesn't seem to be fixed for me with #58168
The displace deform is still not updated when I change texture settings.

@Sergey this still doesn't seem to be fixed for me with #58168 The displace deform is still not updated when I change texture settings.

@ZedDB, if this is still not fixed by ca2680aaeb make a new report, following report guidelines and providing simple .blend file which demonstrates the issue.

@ZedDB, if this is still not fixed by ca2680aaeb make a new report, following report guidelines and providing simple .blend file which demonstrates the issue.

@Sergey ca2680aaeb fixes it for me. Thanks for the fix! :)

@Sergey ca2680aaeb122165adfb5ddd55d3ffc642c56a27 fixes it for me. Thanks for the fix! :)
Author

This comment was removed by @greengiant83

*This comment was removed by @greengiant83*
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#58679
No description provided.