Fix T58679: Missing modifiers update on changes to texture