source/blender/modifiers/intern/MOD_displace.c
@@ -157,6 +157,9 @@ static void updateDepsgraph(ModifierData *md, const ModifierUpdateDepsgraphConte
 	{
 		DEG_add_object_relation(ctx->node, ctx->object, DEG_OB_COMP_TRANSFORM, "Displace Modifier");
 	}
+	if (dmd->texture != NULL) {
+		DEG_add_generic_id_relation(ctx->node, &dmd->texture->id, "Displace Modifier");
+	}
 }
 
 typedef struct DisplaceUserdata {
